# icelandic-thesis-comparison

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: collections.small.yaml  collections.yaml
docs/: coding_scheme.md  skemman_database_mapping.md
scripts/: analyse.R  create_thesis_db.sql  export_schema.sh  metadata_load.py  refresh_metadata.sh  refresh_selected_metadata.py  test_metadata.sql  to_duckdb.py  update_missing_metadata.py  useful_queries.sql
src/skemman_scraper/: classify.py  cli.py  config.py  harvest.py  metadata_load.py  models.py  parse.py  pdf_text.py  simple_search.py  storage.py  utils.py
tests/: test_classify.py
