[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skemman-scraper"
version = "0.1.0"
description = "Skemman simple-search and metadata loader for Icelandic thesis records"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Helga Ingimundardóttir" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

[project.scripts]
skemman = "skemman_scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
